// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BSidebar open render correctly 1`] = `
<div class="b-sidebar">
  <!--v-if-->
  <transition-stub name="slide-next" appear="false" persisted="true" css="true">
    <div class="sidebar-content is-fixed" style="">
      <!--v-if-->
      <div class="content"></div>
    </div>
  </transition-stub>
</div>
`;

exports[`BSidebar render correctly 1`] = `
<div class="b-sidebar">
  <!--v-if-->
  <transition-stub name="slide-prev" appear="false" persisted="true" css="true">
    <div class="sidebar-content is-fixed" style="display: none;">
      <!--v-if-->
      <div class="content"></div>
    </div>
  </transition-stub>
</div>
`;
